Fix broken background image path in CSS file
The image directory path had a formatting error with an extra space. Corrected the path to ensure the background image loads properly. This resolves display issues on the bill of materials page.

--- a/static/css/bill_of_materials.css
+++ b/static/css/bill_of_materials.css
@@ -2,7 +2,7 @@
 
 /* Background image */
 body {
-  background: url("/static/background images/abstractfractal.jpg") center/cover fixed;
+  background: url("/static/background_images/abstractfractal.jpg") center/cover fixed;
 }
 
 /* BOM wrapper */
